# all_star

./: README.md  app.json  package-lock.json  package.json
.prompts/: extract_src.prompt  layout.prompt  promptify.prompt  refacto.prompt
app/: index.tsx
backend_python/: .env  README.md  app.py  notifs copy.py  notifs.py  pyproject.toml  reco.py  test.ipynb
backend_python/data/input/: example_notifications.json
backend_python/data/output/: ranked_notifications.json
